# alligator

./: README.md  alligator.k8s.yml  docker-compose.yml
api/: .dockerignore  .env.sample  Dockerfile  README.md  README.rst  pyproject.toml
api/alligator_api/: crud.py  main.py
api/api/: config.py  main.py  pydantic_models.py  routes.py
api/api/db/: __init__.py  crud.py  interface.py
api/tests/: __init__.py  conftest.py  docker-compose.yml  test_alligator_api.py  test_crud.py  test_misc.py  test_routes.py
db/: .env.sample
