[tool.poetry]
name = "alligator_api"
version = "0.1.0"
description = ""
authors = ["James Cortese <rjcortese@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.62.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
