[tool.poetry]
name = "alligator_api"
version = "0.1.0"
description = "Scaley with salty tears."
authors = ["James Cortese <rjcortese@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.62.0"
uvicorn = "^0.13.1"
pymongo = "^3.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pytest-asyncio = "^0.14.0"
docker-compose = "^1.27.4"
pytest-docker = "^0.10.1"
httpx = "^0.16.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
